<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity titles -->
    <string name="app_name">FileHider</string>
    <string name="ac_name_image_list">FileHider</string>
    <string name="ac_name_image_grid">FileHider</string>
    <string name="ac_name_image_pager">FileHider</string>
    <string name="ac_name_image_gallery">FileHider</string>
    <!-- Labels -->
    <string name="label_activity_examples">FileHider</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
 	<string name="item_view1">ListView</string>
    <string name="item_view2">GridView</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Pictures</item>
        <item >Videos</item>
        <item >Music</item>
        <item >Documents</item>
        <item >Others</item>
        <item>Change credentials</item>
        <item>About</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_settings">Settings</string>
<string name="initials">Enter your Credentials</string>
    <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login</string>
   <string name="initials2">Update your Credentials</string>
    <string name="username2">New Username:</string>
   <string name="password2">New Password:</string>
   <string name="Login2">Update!</string>
   <string name="Developer1">Abhinav Sharma</string>
   <string name="Developer2">Nikita Mehta</string>
   <string name="Developer3">Mohd. Sarfaraz Iqbal</string>
   <string name="Developer4">Shivendra Singh</string>
</resources>