<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
<TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="30sp"
      android:textColor="@color/text_color"
      android:text="FileHider" />
<TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="10sp"
      android:text="Version 1.1.3" />

<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:adjustViewBounds="true"
    android:contentDescription="FileHider"
    android:src="@drawable/ic_launcher" />

<TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="10sp"
      android:text="© 2014. Creed Inc." />
<TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="10sp"
      android:text="All rights reserved." />
<View
  android:layout_width="1dp"
  android:layout_height="30dp">
</View>

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="25sp"
      android:typeface="serif"
      android:textColor="@color/text_color"
      android:text="DEVELOPERS:" />

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/Developer1" />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/Developer2" />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/Developer3" />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/Developer4" />
    
</LinearLayout>